--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Update.razor
@@ -151,6 +151,8 @@
                 icon = 2,
                 title = "出错了"
             });
+            nav.NavigateTo("/project/list");
+            return;
         }
         await _iocManager.Resolve<IProjectGroupService>().DeleteAsync(Id);
         GotoList();
