--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/List.razor
@@ -11,6 +11,7 @@
 @using FS.Core.LinkTrack
 @using FS.Extends
 @using FS.LinkTrack
+@using FS.LinkTrack.Dal
 @using Newtonsoft.Json
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
