--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/Info.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/Info.razor
@@ -6,6 +6,7 @@
 @using FS.Core.Http
 @using System.Text
 @using System.Web
+@using FS.LinkTrack.Dal
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
