增加数据库慢查询

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Info.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/Info.razor
@@ -1,4 +1,4 @@
-@page "/link_track/info/{contextId}"
+@page "/link_track/link/info/{contextId}"
 @using FS.LinkTrack
 @using FS.Core.LinkTrack
 @using FS.Extends
@@ -333,7 +333,7 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/link_track/list");
+        nav.NavigateTo("/link_track/link/list");
     }
 
     private async Task Request()
