--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/db/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/db/List.razor
@@ -30,6 +30,11 @@
         <div class="layui-input-inline w100">
             <input type="text" class="layui-input" placeholder="耗时" style="height: 30px;width:60px;" @bind="searchUseTs">
         </div>
+        排序
+        <select style="display:inline;width: 200px;" @onchange="SortChange">
+            <option value="0">按最新时间</option>
+            <option value="1">1小时内耗时最高</option>
+        </select>
         <div class="layui-input-inline">
             <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="orders-market-search-submit" @onclick="GetList"><i class="am-icon-search"></i> 搜索</button>
         </div>
@@ -168,6 +173,7 @@
     private List<SlowQueryPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
+    private string _curSort = "0";
 
     private string searchDbName;
     private string searchTableName;
@@ -189,11 +195,17 @@
         _curAppId = args.Value.ToString();
         GetList();
     }
+    private void SortChange(ChangeEventArgs args)
+    {
+        _curSort = args.Value.ToString();
+        GetList();
+    }
+
     public void GetList()
     {
         searchDbName = searchDbName?.Trim();
         searchTableName = searchTableName?.Trim();
-        var indexSet = LinkTrackEsContext.Data.SlowQuery.Where(o => o.Term(t => t.CallType, EumCallType.Database)).Sort(s => s.Descending(d => d.StartTs));
+        var indexSet = LinkTrackEsContext.Data.SlowQuery.Where(o => o.Term(t => t.CallType, EumCallType.Database));
         if (!string.IsNullOrWhiteSpace(_curAppId))
         {
             indexSet.Where(o => o.Term(t => t.AppId, _curAppId));
@@ -210,16 +222,25 @@
         {
             indexSet.Where(o => o.LongRange(l => l.Field(f => f.UseTs).GreaterThanOrEquals(searchUseTs)));
         }
+        switch (_curSort)
+        {
+            case "0":
+                indexSet.Sort(s => s.Descending(d => d.StartTs));
+                break;
+            case "1":
+                indexSet.Where(o => o.LongRange(l => l.Field(f => f.StartTs).GreaterThanOrEquals(DateTime.Now.AddHours(-1).ToTimestamps()))).Sort(s => s.Descending(d => d.UseTs));
+                break;
+        }
         _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
 
-        // 替换参数
+    // 替换参数
         foreach (var slowQueryPO in _lst)
         {
             if (slowQueryPO.DbSqlParam != null)
             {
                 foreach (var sqlParam in slowQueryPO.DbSqlParam)
                 {
-                    slowQueryPO.DbSql = slowQueryPO.DbSql.Replace(sqlParam.Key,$"\"{sqlParam.Value}\"");
+                    slowQueryPO.DbSql = slowQueryPO.DbSql.Replace(sqlParam.Key, $"\"{sqlParam.Value}\"");
                 }
             }
         }
