--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/redis/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/redis/List.razor
@@ -27,6 +27,11 @@
         <div class="layui-input-inline w100">
             <input type="text" class="layui-input" placeholder="耗时" style="height: 30px;width:60px;" @bind="searchUseTs">
         </div>
+        排序
+        <select style="display:inline;width: 200px;" @onchange="SortChange">
+            <option value="0">按最新时间</option>
+            <option value="1">1小时内耗时最高</option>
+        </select>
         <div class="layui-input-inline">
             <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="orders-market-search-submit" @onclick="GetList"><i class="am-icon-search"></i> 搜索</button>
         </div>
@@ -129,7 +134,7 @@
     .laytable-cell-14-0-1{ width: 160px; }
     .laytable-cell-14-0-2{ width: 150px; }
     .laytable-cell-14-0-3{ width: 100px; }
-    .laytable-cell-14-0-4{ width: 150px; }
+    .laytable-cell-14-0-4{ width: 250px; }
     select { width: 150px; }
 </style>
 
@@ -144,6 +149,7 @@
     private List<SlowQueryPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
+    private string _curSort = "0";
 
     private string searchMethod;
     private long searchUseTs;
@@ -164,10 +170,15 @@
         _curAppId = args.Value.ToString();
         GetList();
     }
+    private void SortChange(ChangeEventArgs args)
+    {
+        _curSort = args.Value.ToString();
+        GetList();
+    }
     public void GetList()
     {
         searchMethod = searchMethod?.Trim();
-        var indexSet = LinkTrackEsContext.Data.SlowQuery.Where(o => o.Term(t => t.CallType, EumCallType.Redis)).Sort(s => s.Descending(d => d.StartTs));
+        var indexSet = LinkTrackEsContext.Data.SlowQuery.Where(o => o.Term(t => t.CallType, EumCallType.Redis));
         if (!string.IsNullOrWhiteSpace(_curAppId))
         {
             indexSet.Where(o => o.Term(t => t.AppId, _curAppId));
@@ -179,6 +190,16 @@
         if (searchUseTs > 0)
         {
             indexSet.Where(o => o.LongRange(l => l.Field(f => f.UseTs).GreaterThanOrEquals(searchUseTs)));
+        }
+
+        switch (_curSort)
+        {
+            case "0":
+                indexSet.Sort(s => s.Descending(d => d.StartTs));
+                break;
+            case "1":
+                indexSet.Where(o => o.LongRange(l => l.Field(f => f.StartTs).GreaterThanOrEquals(DateTime.Now.AddHours(-1).ToTimestamps()))).Sort(s => s.Descending(d => d.UseTs));
+                break;
         }
         _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
     }
