--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/List.razor
@@ -36,6 +36,11 @@
         <div class="layui-input-inline w100">
             <input type="text" class="layui-input" placeholder="耗时" style="height: 30px;width:60px;" @bind="searchUseTs">
         </div>
+        排序
+        <select style="display:inline;width: 200px;" @onchange="SortChange">
+            <option value="0">按最新时间</option>
+            <option value="1">1小时内耗时最高</option>
+        </select>
         <div class="layui-input-inline">
             <button class="layui-btn layui-btn-sm" lay-submit="" lay-filter="orders-market-search-submit" @onclick="GetList"><i class="am-icon-search"></i> 搜索</button>
         </div>
@@ -177,11 +182,13 @@
     private int _lastIndex;
     private long _totalCount;
     private int _pageSize = 20;
-    [Parameter] public int PageIndex { get; set; }
+    [Parameter]
+    public int PageIndex { get; set; }
     private bool _isFirst;
     private List<LinkTrackContextPO> _lst = new();
     private List<ProjectVO> _lstAppId = new();
     private string _curAppId = "";
+    private string _curSort = "0";
 
     private string searchUrl;
     private string searchIp;
@@ -194,7 +201,7 @@
 
         if (PageIndex < 1) PageIndex = 1;
         _lastIndex = PageIndex;
-        
+
         _lstAppId = await _iocManager.Resolve<IProjectService>().ToAppListAsync() ?? new();
         GetList();
     }
@@ -204,19 +211,24 @@
         _curAppId = args.Value.ToString();
         GetList();
     }
+    private void SortChange(ChangeEventArgs args)
+    {
+        _curSort = args.Value.ToString();
+        GetList();
+    }
 
     public void GetList()
     {
         searchUrl = searchUrl?.Trim();
         searchIp = searchIp?.Trim();
-        var indexSet = LinkTrackEsContext.Data.LinkTrackContext.Sort(s => s.Descending(d => d.StartTs));
+        var indexSet = LinkTrackEsContext.Data.LinkTrackContext;
         if (!string.IsNullOrWhiteSpace(_curAppId))
         {
             indexSet.Where(o => o.Term(t => t.AppId, _curAppId));
         }
         if (!string.IsNullOrWhiteSpace(searchUrl))
         {
-            indexSet.Where(o => o.QueryString(t => t.Fields(f => f.Field(f=>f.Path)).Query($"*{searchUrl}*")));
+            indexSet.Where(o => o.QueryString(t => t.Fields(f => f.Field(f => f.Path)).Query($"*{searchUrl}*")));
         }
         if (!string.IsNullOrWhiteSpace(searchIp))
         {
@@ -225,6 +237,15 @@
         if (searchUseTs > 0)
         {
             indexSet.Where(o => o.LongRange(l => l.Field(f => f.UseTs).GreaterThanOrEquals(searchUseTs)));
+        }
+        switch (_curSort)
+        {
+            case "0":
+                indexSet.Sort(s => s.Descending(d => d.StartTs));
+                break;
+            case "1":
+                indexSet.Where(o => o.LongRange(l => l.Field(f => f.StartTs).GreaterThanOrEquals(DateTime.Now.AddHours(-1).ToTimestamps()))).Sort(s => s.Descending(d => d.UseTs));
+                break;
         }
         _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
     }
