修改错误的链接地下

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/link/List.razor
@@ -112,7 +112,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
-                                        <a href="/link_track/info/@(info.ContextId)">@info.ContextId</a>
+                                        <a href="/link_track/link/info/@(info.ContextId)">@info.ContextId</a>
                                     </div>
                                 </td>
                                 <td data-field="Title">
@@ -143,7 +143,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-left laytable-cell-14-0-6">
-                                        <a href="/link_track/info/@(info.ContextId)">
+                                        <a href="/link_track/link/info/@(info.ContextId)">
                                             <strong class="layui-badge layui-bg-green">@info.Method</strong> @info.Path
                                         </a>
                                     </div>
