--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/mq/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/mq/List.razor
@@ -88,7 +88,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
-                                        <a href="/link_track/info/@(info.ContextId)">@info.ContextId</a>
+                                        <a href="/link_track/link/info/@(info.ContextId)">@info.ContextId</a>
                                     </div>
                                 </td>
                                 <td data-field="Title">
